log
src/DrawBresenhamLine.cpp: In function ‘void DrawBresLine(double, double, double, double)’:
src/DrawBresenhamLine.cpp:11:27: error: call of overloaded ‘abs(double)’ is ambiguous
     int dx = abs(_x1 - _x0);
                           ^
In file included from /usr/include/c++/6.3.1/cstdlib:75:0,
                 from /usr/include/c++/6.3.1/ext/string_conversions.h:41,
                 from /usr/include/c++/6.3.1/bits/basic_string.h:5402,
                 from /usr/include/c++/6.3.1/string:52,
                 from /usr/include/c++/6.3.1/bits/locale_classes.h:40,
                 from /usr/include/c++/6.3.1/bits/ios_base.h:41,
                 from /usr/include/c++/6.3.1/ios:42,
                 from /usr/include/c++/6.3.1/ostream:38,
                 from /usr/include/c++/6.3.1/iostream:39,
                 from src/DrawBresenhamLine.cpp:1:
/usr/include/stdlib.h:735:12: note: candidate: int abs(int)
 extern int abs (int __x) __THROW __attribute__ ((__const__)) __wur;
            ^~~
In file included from /usr/include/c++/6.3.1/ext/string_conversions.h:41:0,
                 from /usr/include/c++/6.3.1/bits/basic_string.h:5402,
                 from /usr/include/c++/6.3.1/string:52,
                 from /usr/include/c++/6.3.1/bits/locale_classes.h:40,
                 from /usr/include/c++/6.3.1/bits/ios_base.h:41,
                 from /usr/include/c++/6.3.1/ios:42,
                 from /usr/include/c++/6.3.1/ostream:38,
                 from /usr/include/c++/6.3.1/iostream:39,
                 from src/DrawBresenhamLine.cpp:1:
/usr/include/c++/6.3.1/cstdlib:185:3: note: candidate: __int128 std::abs(__int128)
   abs(__GLIBCXX_TYPE_INT_N_0 __x) { return __x >= 0 ? __x : -__x; }
   ^~~
/usr/include/c++/6.3.1/cstdlib:180:3: note: candidate: long long int std::abs(long long int)
   abs(long long __x) { return __builtin_llabs (__x); }
   ^~~
/usr/include/c++/6.3.1/cstdlib:172:3: note: candidate: long int std::abs(long int)
   abs(long __i) { return __builtin_labs(__i); }
   ^~~
src/DrawBresenhamLine.cpp:13:27: error: call of overloaded ‘abs(double)’ is ambiguous
     int dy = abs(_y1 - _y0);
                           ^
In file included from /usr/include/c++/6.3.1/cstdlib:75:0,
                 from /usr/include/c++/6.3.1/ext/string_conversions.h:41,
                 from /usr/include/c++/6.3.1/bits/basic_string.h:5402,
                 from /usr/include/c++/6.3.1/string:52,
                 from /usr/include/c++/6.3.1/bits/locale_classes.h:40,
                 from /usr/include/c++/6.3.1/bits/ios_base.h:41,
                 from /usr/include/c++/6.3.1/ios:42,
                 from /usr/include/c++/6.3.1/ostream:38,
                 from /usr/include/c++/6.3.1/iostream:39,
                 from src/DrawBresenhamLine.cpp:1:
/usr/include/stdlib.h:735:12: note: candidate: int abs(int)
 extern int abs (int __x) __THROW __attribute__ ((__const__)) __wur;
            ^~~
In file included from /usr/include/c++/6.3.1/ext/string_conversions.h:41:0,
                 from /usr/include/c++/6.3.1/bits/basic_string.h:5402,
                 from /usr/include/c++/6.3.1/string:52,
                 from /usr/include/c++/6.3.1/bits/locale_classes.h:40,
                 from /usr/include/c++/6.3.1/bits/ios_base.h:41,
                 from /usr/include/c++/6.3.1/ios:42,
                 from /usr/include/c++/6.3.1/ostream:38,
                 from /usr/include/c++/6.3.1/iostream:39,
                 from src/DrawBresenhamLine.cpp:1:
/usr/include/c++/6.3.1/cstdlib:185:3: note: candidate: __int128 std::abs(__int128)
   abs(__GLIBCXX_TYPE_INT_N_0 __x) { return __x >= 0 ? __x : -__x; }
   ^~~
/usr/include/c++/6.3.1/cstdlib:180:3: note: candidate: long long int std::abs(long long int)
   abs(long long __x) { return __builtin_llabs (__x); }
   ^~~
/usr/include/c++/6.3.1/cstdlib:172:3: note: candidate: long int std::abs(long int)
   abs(long __i) { return __builtin_labs(__i); }
   ^~~
src/DrawBresenhamLine.cpp:20:24: error: ‘x0’ was not declared in this scope
             glVertex3f(x0, y0, 0.0);
                        ^~
src/DrawBresenhamLine.cpp:20:28: error: ‘y0’ was not declared in this scope
             glVertex3f(x0, y0, 0.0);
                            ^~
make: *** [makefile:28: obj/DrawBresenhamLine.o] Error 1
